--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                   <article class="description-content">
                 <h2> Visualizations </h2>
                 <hr>
-                <a href = "temp.html"> <img src="assets/Temperature.png" alt="Scatter 1" width="40%" class="img-thumbnail imagestyle"></a>
-                <a href = "humidity.html"> <img src="assets/Humidity.png" alt="Scatter 2" width="40%" class="img-thumbnail imagestyle"></a>
-                <a href = "cloudness.html"> <img src="assets/Cloudness.png" alt="Scatter 3" width="40%" class="img-thumbnail imagestyle"></a>
-                <a href = "windspeed.html"><img src="assets/Windspeed.png" alt="Scatter 4" width="40%" class="img-thumbnail imagestyle"></a>
+                <a href = "temp.html"> <img src="Temperature.png" alt="Scatter 1" width="40%" class="img-thumbnail imagestyle"></a>
+                <a href = "humidity.html"> <img src="Humidity.png" alt="Scatter 2" width="40%" class="img-thumbnail imagestyle"></a>
+                <a href = "cloudness.html"> <img src="Cloudness.png" alt="Scatter 3" width="40%" class="img-thumbnail imagestyle"></a>
+                <a href = "windspeed.html"><img src="Windspeed.png" alt="Scatter 4" width="40%" class="img-thumbnail imagestyle"></a>
                   </article>
               
                </div>
